feat: smaller image

--- a/Dockerfile.yosys
+++ b/Dockerfile.yosys
@@ -29,7 +29,9 @@ RUN apt-get update && apt-get -y install \
 RUN pip3 install git+https://github.com/RPGillespie6/fastcov.git --break-system-packages
 
 # Clone Yosys repository
-RUN git clone https://github.com/YosysHQ/yosys.git /yosys
+RUN git clone --depth 1 https://github.com/YosysHQ/yosys.git /yosys
+RUN git submodule init
+RUN git submodule update --init --recursive
 
 # compile ABC without compile flags...
 WORKDIR /yosys/abc
