feat: add coverage analysing file

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ coverage_reports.bak/yosys/*
 coverage_reports.bak/verilator/*
 !coverage_reports.bak/yosys/comparison
 !coverage_reports.bak/verilator/comparison
+
+coverage*.json
