--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,24 @@ requires-python = ">=3.13"
 dependencies = [
     "black>=24.10.0",
     "bs4>=0.0.2",
+    "langchain>=0.3.24",
+    "langchain-google-genai>=2.1.4",
+    "langchain-mistralai>=0.2.10",
+    "langchain-openai>=0.3.15",
     "matplotlib>=3.10.1",
     "mypy>=1.14.1",
     "numpy>=2.2.1",
     "pyqt6>=6.9.0",
     "pytest>=8.3.4",
     "ruff>=0.9.2",
+    "snippetGen"
 ]
+
+[tool.hatch.build.targets.wheel]
+    packages = ["snippetGen"]
+
+[tool.uv.sources]
+    snippetGen = { workspace = true }
 
 [tool.ruff]
 exclude = [
@@ -227,6 +238,9 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = "datasketch.*"
 ignore_missing_imports = true
+
+[tool.uv.workspace]
+members = ["snippetGen/snippetGen", "snippetGen"]
 
 [dependency-groups]
 dev = ["types-beautifulsoup4>=4.12.0.20250204"]
